# Medical_agent

./: .gitignore  README.md  WELCOME.ipynb  extract_data.py  main.py  merging.py  package-lock.json  process_patient.py  pyproject.toml  read.md  segmentation.py  test_judge.py
.deepeval/: .deepeval_telemetry.txt
notebooks/: download_study.ipynb  segmentation.ipynb
src/api/: main.py  schemas.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: index.css
src/frontend/src/components/: EcgAnimation.tsx  PatientIdInput.tsx  RadiologyMcq.tsx  ReportViewer.tsx  TumorGame.tsx
src/frontend/src/lib/: api.ts  mockReport.ts
src/frontend/src/pages/: Index.tsx
src/npr/: __init__.py  demo_clean.xlsx  demo_npr.py  mistral_call.py  npr.py  ollama_call.py  utils.py
src/onco_veto/: Rar.py  evaluate.py  main.py
src/onco_veto/.deepeval/: .deepeval_telemetry.txt
src/pipeline/: Pipeline.md  __init__.py  llm_caller.py  orchestrator.py  prompt_builder.py  response_parser.py  test_format_helpers.py
