[project]
name = "medical-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dcm-seg-nodules",
    "deepeval>=3.8.8",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "simpleitk>=2.5.3",
]

[tool.uv.sources]
dcm-seg-nodules = { path = "dcm_seg_nodules-1.0.0-py3-none-any.whl" }
